# ShellTools

./: .gitignore  README.md  _synchronized_output.py  _tracker.py  annotation.py  check  configure  demo.py  pyproject.toml  remote.py  requirement.txt  requirements.txt  requirements_dev.txt  run_demo  shell.py  tracker.py
.github/hook/: pre-commit
.github/workflows/: Check.yml  CheckInstallation.yml
display/: banner.py  synchronized_ostream.py
doc/: README.rst  build  conf.py
doc/remote/: README.rst
doc/shell/: README.rst
docs/: README.rst  build
docs/remote/: README.rst
docs/shelltools/shell/: README.rst
examples/: mock_shell.py
remote/: README.md  remote.py
shell/: README.md  __init__.py  banner.py  command.py  keyboard_listener.py  shell.py
src/: demo.py
src/remote/: README.md  remote.py
src/shell/: README.md  keyboard_listener.py
src/shelltools/: README.md
src/shelltools/remote/: remote.py
src/shelltools/shell/: README.md  __init__.py  command.py  shell.py
src/shelltools/tracker/: tracker.py
src/shelltools/utility/: .gitignore  match.py  readline_extension.cpp  synchronized_ostream.py
src/tracker/: tracker.py
src/utility/: __init__.py
tests/: .gitignore  __init__.py  mock_shell.py  test_extension_module.cpp  test_remote.py  test_shell.py  test_snippet.py  test_tracker.py
tracker/: tracker.py
utility/: match.py  synchronized_ostream.py
